DMC-485: [CORE] MCP CLI Support